--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -88,7 +88,7 @@
           d="M96 0C60.7 0 32 28.7 32 64V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H96zM208 288h64c44.2 0 80 35.8 80 80c0 8.8-7.2 16-16 16H144c-8.8 0-16-7.2-16-16c0-44.2 35.8-80 80-80zm-32-96a64 64 0 1 1 128 0 64 64 0 1 1 -128 0zM512 80c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V80zM496 192c-8.8 0-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm16 144c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V336z" />
       </svg>Контакти</h2>
     <div class="content">
-      <div class="flex flex-wrap place-content-center text-center space-y-10">
+      <div class="flex flex-wrap place-content-center text-center space-y-10 flex-col">
         <div class="address-contacts">
           <svg class="w-6 inline py-2 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path
@@ -126,8 +126,6 @@
       </div>
     </div>
   </div>
-
-
   <hr>
   <div class="documents">
     <div class="container">
@@ -144,8 +142,6 @@
         </div>
     </div>
   </div>
-
-
   <hr>
   <br>
   <iframe
