--- a/src/styles.scss
+++ b/src/styles.scss
@@ -155,5 +155,39 @@ hr {
 }
 
 
+table {
+    max-width: 100%;
+    margin-bottom: 20px;
+    border: 5px solid #fff;
+    border-top: 5px solid #fff;
+    border-bottom: 3px solid #fff;
+    border-collapse: collapse;
+    outline: 3px solid #7accee;
+    font-size: 0.75rem;
+    background: #fff!important;
+}
+table th {
+    font-weight: bold;
+    padding: 0.75rem;
+    background: #7accee;
+    border: none;
+    text-align: center;
+    font-size: 1rem;
+    border-top: 3px solid #fff;
+    border-bottom: 3px solid #7accee;
+}
+table td {
+    padding: 10px;
+    border: none;
+    text-align: center;
+    border-top: 3px solid #fff;
+    border-bottom: 3px solid #fff;
+    font-size: 0.75rem;
+}
+table tbody tr:nth-child(even){
+    background: #f8f8f8!important;
+}
+
+
 // @import "../stylesheets/scss-file";
 
