--- a/src/app/components/burger-menu/burger-menu.component.scss
+++ b/src/app/components/burger-menu/burger-menu.component.scss
@@ -10,11 +10,11 @@
     height: 3px;
     background-color: #333;
     margin: 4px 4px;  
-    transition: 0.3s;
+    transition: 0.2s;
   }
   
   .open .bar:nth-child(1) {
-    transform: rotate(-45deg) translate(-4.5px, 5.5px);
+    transform: rotate(-45deg) translate(-4.4px, 4.4px);
   }
   
   .open .bar:nth-child(2) {
@@ -24,37 +24,82 @@
   .open .bar:nth-child(3) {
     transform: rotate(45deg) translate(-5px, -6px);
   }
-  
+
+
   .menu-list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
     display: block;
-  }
-  
-  .menu-list.open {
-    display: block;
-  }
-  
-  .menu-list li {
-    cursor: pointer;
-    padding: 10px;
-    position: relative;
-  }
-  
-  .menu-list li:hover {
-    background-color: #ddd;
+    position: absolute;
+    top: 24.3%;
+    left: 0;
+    min-width: 80%;
+    text-align: center;
+    background-color: #7fffd4;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    z-index: 1;
   }
   
   .menu-list ul {
-    list-style-type: none;
-    padding-left: 20px;
-    position: absolute;
-    left: 100%; /* Отступ от родительского элемента */
-    top: 0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .menu-list li {
+    padding: 10px;
+    border-bottom: 1px solid #03ad55;
+  }
+  
+  .menu-list li a {
+    text-decoration: none;
+    color: #006400;
+    display: block;
+  }
+  
+  .menu-list li ul {
     display: none;
   }
   
-  .menu-list li:hover > ul {
+  .menu-list li:hover ul {
     display: block;
+    position: absolute;
+    left: 100%;
+    top: 0;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
+  
+  // .menu-list {
+  //   display: block;
+  //   position: absolute;
+  //   left: 0;
+  //   top: 24.3%;
+  //   min-width: 100%;
+  //   text-align: center;
+  //   padding: 0;
+  //   margin: 0;
+  //   background-color: #7fffd4;
+  //   z-index: 20;
+  // }
+
+  
+  // .menu-list li {
+  //   padding: 10px;
+  //   position: relative;
+  // }
+  
+  // .menu-list li:hover {
+  //   background-color: #ddd;
+  // }
+  
+  // .menu-list ul {
+  //   list-style-type: none;
+  //   padding-left: 20px;
+  //   position: absolute;
+  //   left: 100%; /*Отступ от родительского элемента */
+  //   top: 0; 
+  //   display: none;
+  // }
+  
+  // .menu-list li:hover > ul {
+  //   display: block;
+  // }
