--- a/src/app/components/burger-menu/burger-menu.component.html
+++ b/src/app/components/burger-menu/burger-menu.component.html
@@ -7,10 +7,15 @@
     </div>
     <ul *ngIf="isOpen" class="menu-list">
       <li *ngFor="let item of menuItems" (click)="handleItemClick(item)">
-        {{ item.title }}
+        <a [href]="item.link">{{ item.title }}</a>
         <ul *ngIf="item.children && item.children.length && item.isOpen">
           <li *ngFor="let child of item.children" (click)="handleItemClick(child)">
             {{ child.title }}
+            <ul *ngIf="child.children && child.children.length && item.isOpen">
+              <li *ngFor="let second_child of child.children" (click)="handleItemClick(second_child)">
+                {{ second_child.title }}
+              </li>
+            </ul>
           </li>
         </ul>
       </li>
