--- a/src/app/components/burger-menu/burger-menu.component.scss
+++ b/src/app/components/burger-menu/burger-menu.component.scss
@@ -1,5 +1,4 @@
 .burger-menu {
-    
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -39,6 +38,7 @@
     z-index: 2;
     transform: translateX(-150%);
     animation: ani 0.5s forwards;
+    overflow-y: scroll;
   }
 
   @keyframes ani {
@@ -47,6 +47,7 @@
   }
   
   .menu ul {
+    min-height: 100%;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -68,7 +69,17 @@
   
   .menu ul ul {
     background: #35ff69;
-    margin-left: 20px;
+    border: #fff 1px solid;
+    border-radius: 5%;
+    margin-top: 10px;
+    display: none;
+  }
+
+  .menu ul ul ul {
+    background: #fff;
+    border: #35ff69 5px solid;
+    border-radius: 5%;
+    margin-top: 10px;
     display: none;
   }
   
