--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -4,7 +4,7 @@
             <div class="flex items-center justify-between min-h-full">
                 <ul
                     class="flex flex-wrap font-raleway place-content-center mb-0 text-sm font-tiny text-white sm:space-x-6">
-                    <li class="place-content-center hidden">
+                    <li class="place-content-center">
                         <img class="float-left mr-2" src="../../../assets/images/topbar/address.ico" alt="address" />
                         <a class="hover:text-gray-300" href="https://maps.app.goo.gl/p5xPvoY4jPQRvJ8Q9"
                             target="_blank">м.Чорноморськ, вул.Олександрійська,  2</a>
@@ -13,7 +13,7 @@
                         <img class="float-left mr-2" src="../../../assets/images/topbar/phone.ico" alt="phone" />
                         <a class="hover:text-gray-300" href="tel:">+380962986084</a>
                     </li>
-                    <li class="mt-2">
+                    <li>
                         <img class="float-left mr-2" src="../../../assets/images/topbar/email.ico" alt="email" />
                         <a class="hover:text-gray-300"
                             href="mailto:green.laboratoriya@gmail.com">green.laboratoriya&#64;gmail.com</a>
