--- a/src/app/components/burger-menu/burger-menu.component.html
+++ b/src/app/components/burger-menu/burger-menu.component.html
@@ -1,70 +1,69 @@
-<!-- burger-menu.component.html -->
 <div class="burger-menu" [ngClass]="{'open': isOpen}">
-    <div class="burger-icon" (click)="toggleMenu()">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-    </div>
-    <div *ngIf="isOpen" class="menu-overlay" (click)="closeMenu()"></div>
-    <div *ngIf="isOpen" class="menu">
-      <hr/>
-      <ul>
-        <li><a (click)="closeMenu()" routerLink="/">Головна </a></li>
-        <li>
-          <a routerLink="" (click)="toggleSubMenu()">Правила збіру проб &#10095;</a>
-          <ul *ngIf="isSubMenuOpen">
-            <li><a (click)="closeMenu()" routerLink="/preparation">Підготовка тварини до аналізу </a></li>
-            <li><a (click)="closeMenu()" routerLink="/rules">Правила збіру проб</a></li>
-            <li><a (click)="closeMenu()" routerLink="/marking">Маркування проб</a></li>
-            <li><a (click)="closeMenu()" routerLink="/materials">Витратні матеріали</a></li>
-            <li>
-              <a routerLink="" (click)="toggleSubSubMenu()">Відбір &#10095;</a>
-                <ul *ngIf="isSubSubMenuOpen">
-                  <li><a (click)="closeMenu()" routerLink="/blood-sampling">Вибір крові</a></li>
-                  <li><a (click)="closeMenu()" routerLink="/conjunctiva-sampling">Змив з кон&#39;юктиви</a></li>
-                  <li><a (click)="closeMenu()" routerLink="/nose-sampling">Змив з носа</a></li>
-                  <li><a (click)="closeMenu()" routerLink="/vagina-sampling">Зішкріб зі слизової урогенітального тракту, піхви</a></li>
-                  <li><a (click)="closeMenu()" routerLink="/rectal-sampling">Зішкріб зі слизової прямої кишки</a></li>
-                  <li><a (click)="closeMenu()" routerLink="/oral-sampling">Змив з ротової порожнини, глотки</a></li>
-                  <li><a (click)="closeMenu()" routerLink="/discharge-sampling">Відбір випоту (грудного, черевного)</a></li>
-                </ul>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a routerLink="" (click)="toggleSubMenu()">Послуги &#10095;</a>
-          <ul *ngIf="isSubMenuOpen">
-            <li><a (click)="closeMenu()" routerLink="/info">Шо таке ПЛР?</a></li>
-            <li><a (click)="closeMenu()" routerLink="">Прайс-лист</a></li>
-            <li>
-              <a routerLink="" (click)="toggleSubSubMenu()">Діагностика ПЛР   &#10095;</a>
-              <ul *ngIf="isSubSubMenuOpen">
-                <li><a (click)="closeMenu()" routerLink="/diagnostics-plr-cats">Для котів</a></li>
-                <li><a (click)="closeMenu()" routerLink="/diagnostics-plr-dogs">Для собак</a></li>
-                <li><a (click)="closeMenu()" routerLink="/diagnostics-plr-ferrets">Для тхорів</a></li>
-              </ul>
-            </li>
-            <li>
-              <a routerLink="" (click)="toggleSubSubMenu()">Діагностичні панелі ПЛР   &#10095;</a>
-                <ul *ngIf="isSubSubMenuOpen">
-                  <li><a (click)="closeMenu()" routerLink="/diagnostics-panel-cats">Для котів</a></li>
-                  <li><a (click)="closeMenu()" routerLink="/diagnostics-panel-dogs">Для собак</a></li>
-                </ul>
-            </li>
-            <li><a (click)="closeMenu()" routerLink="/hormones">Гормони</a></li>
-            <li><a (click)="closeMenu()" routerLink="/genetics">Генетичні дослідження</a></li>
-            <li><a (click)="closeMenu()" routerLink="/bacterium-research">Бакпосів</a></li>
-            <li>
-              <a routerLink="" (click)="toggleSubSubMenu()">Маркери запалення <span style="color: #ff1818">(новинка)</span> &#10095;</a>
-                <ul *ngIf="isSubSubMenuOpen">
-                  <li><a (click)="closeMenu()" routerLink="/markers-cats">Для котів</a></li>
-                  <li><a (click)="closeMenu()" routerLink="/markers-dogs">Для собак</a></li>
-                </ul>
-            </li>
-          </ul>
-        </li>
-        <li><a (click)="closeMenu()" routerLink="/guide">Як здати аналіз?</a></li>
-        <li><a (click)="closeMenu()" routerLink="/contact">Контакти</a></li>
-      </ul>
-    </div>
+  <div class="burger-icon" (click)="toggleMenu()">
+    <div class="bar"></div>
+    <div class="bar"></div>
+    <div class="bar"></div>
   </div>
+  <div *ngIf="isOpen" class="menu-overlay" (click)="closeMenu()"></div>
+  <div *ngIf="isOpen" class="menu">
+    <hr />
+    <ul>
+      <li><a (click)="closeMenu()" routerLink="/">Головна </a></li>
+      <li>
+        <a (click)="toggleSubMenu('rulesSubMenu')">Правила збіру проб &#10095;</a>
+        <ul *ngIf="subMenus['rulesSubMenu']">
+          <li><a (click)="closeMenu()" routerLink="/preparation">Підготовка тварини до аналізу </a></li>
+          <li><a (click)="closeMenu()" routerLink="/rules">Правила збіру проб</a></li>
+          <li><a (click)="closeMenu()" routerLink="/marking">Маркування проб</a></li>
+          <li><a (click)="closeMenu()" routerLink="/materials">Витратні матеріали</a></li>
+          <li>
+            <a routerLink="" (click)="toggleSubMenu('vidbirSubMenu')">Відбір &#10095;</a>
+              <ul *ngIf="subMenus['vidbirSubMenu']">
+                <li><a (click)="closeMenu()" routerLink="/blood-sampling">Вибір крові</a></li>
+                <li><a (click)="closeMenu()" routerLink="/conjunctiva-sampling">Змив з кон&#39;юктиви</a></li>
+                <li><a (click)="closeMenu()" routerLink="/nose-sampling">Змив з носа</a></li>
+                <li><a (click)="closeMenu()" routerLink="/vagina-sampling">Зішкріб зі слизової урогенітального тракту, піхви</a></li>
+                <li><a (click)="closeMenu()" routerLink="/rectal-sampling">Зішкріб зі слизової прямої кишки</a></li>
+                <li><a (click)="closeMenu()" routerLink="/oral-sampling">Змив з ротової порожнини, глотки</a></li>
+                <li><a (click)="closeMenu()" routerLink="/discharge-sampling">Відбір випоту (грудного, черевного)</a></li>
+              </ul>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a (click)="toggleSubMenu('servicesSubMenu')">Послуги &#10095;</a>
+        <ul *ngIf="subMenus['servicesSubMenu']">
+          <li><a (click)="closeMenu()" routerLink="/info">Шо таке ПЛР?</a></li>
+          <li><a (click)="closeMenu()" routerLink="">Прайс-лист (pdf)</a></li>
+          <li>
+            <a (click)="toggleSubMenu('diagnosticsSubMenu')">Діагностика ПЛР   &#10095;</a>
+            <ul *ngIf="subMenus['diagnosticsSubMenu']">
+              <li><a (click)="closeMenu()" routerLink="/diagnostics-plr-cats">Для котів</a></li>
+              <li><a (click)="closeMenu()" routerLink="/diagnostics-plr-dogs">Для собак</a></li>
+              <li><a (click)="closeMenu()" routerLink="/diagnostics-plr-ferrets">Для тхорів</a></li>
+            </ul>
+          </li>
+          <li>
+            <a (click)="toggleSubMenu('panelsSubMenu')">Діагностичні панелі ПЛР   &#10095;</a>
+            <ul *ngIf="subMenus['panelsSubMenu']">
+              <li><a (click)="closeMenu()" routerLink="/diagnostics-panel-cats">Для котів</a></li>
+              <li><a (click)="closeMenu()" routerLink="/diagnostics-panel-dogs">Для собак</a></li>
+            </ul>
+          </li>
+          <li><a (click)="closeMenu()" routerLink="/hormones">Гормони</a></li>
+          <li><a (click)="closeMenu()" routerLink="/genetics">Генетичні дослідження</a></li>
+          <li><a (click)="closeMenu()" routerLink="/bacterium-research">Бакпосів</a></li>
+          <li>
+            <a (click)="toggleSubMenu('markersSubMenu')">Маркери запалення <span style="color: #ff1818">(новинка)</span> &#10095;</a>
+            <ul *ngIf="subMenus['markersSubMenu']">
+              <li><a (click)="closeMenu()" routerLink="/markers-cats">Для котів</a></li>
+              <li><a (click)="closeMenu()" routerLink="/markers-dogs">Для собак</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li><a (click)="closeMenu()" routerLink="/guide">Як здати аналіз?</a></li>
+      <li><a (click)="closeMenu()" routerLink="/contact">Контакти</a></li>
+    </ul>
+  </div>
+</div>
