--- a/src/app/components/burger-menu/burger-menu.component.scss
+++ b/src/app/components/burger-menu/burger-menu.component.scss
@@ -32,8 +32,8 @@
     top: 100%;
     left: 0;   
     text-align: center;
-    min-width: 100%; 
-    min-height: 100%;
+    width: 100%; 
+    height: 1000%;
     background: #fff;
     z-index: 2;
     transform: translateX(-150%);
@@ -73,6 +73,13 @@
     border-radius: 5%;
     margin-top: 10px;
     display: none;
+    transform: translateX(-150%);
+    animation: ani 0.5s forwards;
+  }
+
+  @keyframes ani {
+    0% {transform: translateX(-150%);}
+    100% {transform: translateY(0);}
   }
 
   .menu ul ul ul {
