--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -1,5 +1,6 @@
 
 .main-image {
+    // min-height: 86dvh;
     min-height: 86dvh;
     border-radius: 0 0 30px 30px;
     -moz-border-radius: 0 0 30px 30px;
@@ -120,8 +121,51 @@
     object-fit: contain;
 }
 
-.certificate img:hover {
-    transform: scale(0.98);
-}
 
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
+  .modal-container {
+    text-align: center;
+  }
+
+  .modal-image {
+    max-width: 80%;
+    max-height: 80%;
+    object-fit: contain;
+  }
+
+  .image-container {
+    cursor: pointer;
+  }
+
+  .enlarged {
+    cursor: zoom-in;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .enlarged:hover {
+    transform: scale(1.5);
+  }
+
+//   #image1 { 
+//     max-width: 80%;
+//     max-height: 80%;
+//     object-fit: contain;
+//     animation-name: zoom;
+//     animation-duration: 0.6s;
+//   }
+
+//   @keyframes zoom {
+//     from {transform:scale(0)}
+//     to {transform:scale(1)}
+// }
