--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -121,51 +121,58 @@
     object-fit: contain;
 }
 
-
-.modal-overlay {
+.modal {
+    display: none;
     position: fixed;
-    top: 0;
+    z-index: 20;
+    padding-top: 100px;
+    margin-right: 15%;
     left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
   }
 
-  .modal-container {
+  .modal-content {
+    margin-top: 5%;
+    display: block;
+    width: 100%;
+    height: 85%;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+  }
+
+  #caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
     text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 10px;
   }
 
-  .modal-image {
-    max-width: 80%;
-    max-height: 80%;
-    object-fit: contain;
+  .close {
+    position: absolute;
+    top: 10%;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
   }
 
-  .image-container {
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
     cursor: pointer;
   }
 
-  .enlarged {
-    cursor: zoom-in;
-    transition: transform 0.3s ease-in-out;
-  }
-
-  .enlarged:hover {
-    transform: scale(1.5);
-  }
-
-//   #image1 { 
-//     max-width: 80%;
-//     max-height: 80%;
-//     object-fit: contain;
-//     animation-name: zoom;
-//     animation-duration: 0.6s;
-//   }
-
-//   @keyframes zoom {
-//     from {transform:scale(0)}
-//     to {transform:scale(1)}
-// }
+  @keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
