--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -141,7 +141,8 @@
             <a routerLink="/license" class="gradient-button-green">Переглянути документи</a>
         </div>
         <div>
-        <a href="../../../assets/images/main/doc_certificate.png" target="_blank"><img class="my-3 w-30" loading="lazy" src="../../../assets/images/main/doc_certificate.png"></a>
+        <a href="../../../assets/images/main/doc_certificate.png" target="_blank"><img class="mt-3 w-30" loading="lazy" src="../../../assets/images/main/doc_certificate.png"></a>
+        <div class="mb-4 font-nunito text-sm">Сертифікат визнання вимірювальних можливостей</div>
         </div>
         </div>
     </div>
