--- a/src/app/components/burger-menu/burger-menu.component.scss
+++ b/src/app/components/burger-menu/burger-menu.component.scss
@@ -33,7 +33,7 @@
     left: 0;   
     text-align: center;
     width: 100%; 
-    height: 1000%;
+    height: 950%;
     background: #fff;
     z-index: 2;
     transform: translateX(-150%);
@@ -81,11 +81,11 @@
   .menu ul ul ul {
     background: #fff;
     border: #35ff69 5px solid;
-    border-radius: 5%;
+    border-radius: 1em;
     margin-top: 10px;
     display: none;
   }
-  
+
   .menu ul li:hover > ul {
     display: block;
   }
