--- a/src/app/components/burger-menu/burger-menu.component.scss
+++ b/src/app/components/burger-menu/burger-menu.component.scss
@@ -33,7 +33,7 @@
     left: 0;   
     text-align: center;
     width: 100%; 
-    height: 950%;
+    height: 90dvh;
     background: #fff;
     z-index: 2;
     transform: translateX(-150%);
