--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="home-page">
-  <section class="main-image bg-center bg-no-repeat bg-main-image bg-blend-multiply">
+  <section class="main-image bg-center bg-no-repeat bg-main-image bg-blend-multiply lg:bg-cover">
     <div class="mx-auto max-w-screen-xl text-center pt-14 pb-0">
-      <h2 class="mb-4 mt-0 text-6xl font-nunito font-normal tracking-tight leading-none text-white lg:text-8xl">
+      <h2 class="mb-4 mt-14 text-6xl font-nunito font-normal tracking-tight leading-none text-white lg:text-8xl">
         <span class="text-custom_green">Green</span>Lab
       </h2>
-      <p class="paragraph-info mx-3 mb-8 text-2xl font-thin font-nunito text-white lg:text-2xl">
+      <p class="paragraph-info mx-3 mb-8 text-2xl font-thin font-nunito text-white lg:text-4xl">
         Універсальна ПЛР Лабораторія</p>
       <div class="home-buttons space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
         <a routerLink="/guide"
@@ -16,8 +16,8 @@
           Прайс-лист
         </a>
       </div>
-      <p class="price-info font-raleway my-5">Ціни вказані за станом на 01.06.2023</p>
-      <div class="worktime text-center font-jost mx-3 p-1 my-6">
+      <p class="price-info font-raleway my-5 lg:text-lg lg:my-2">Ціни вказані за станом на 01.06.2023</p>
+      <div class="worktime text-center font-jost mx-3 p-1 my-6 lg:text-xl lg:w-1/2 lg:font-medium">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10.00-18.00 (НД-вихідний)</p>
         <p>Доставка з клініки м.Чорноморськ ПН-СБ (НД-вихідний)</p>
@@ -29,18 +29,20 @@
       </div>
     </div>
   </section>
+
+  <!-- About us -->
   <div class="container">
-    <main class="about font-nunito relative p-3 -mt-8 bg-white rounded-3xl shadow-2xl shadow-gray-800">
+    <div class="font-nunito text-base relative p-3 -mt-8 mb-5 mx-64 bg-white rounded-3xl shadow-2xl drop-shadow-md">
       <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold">Про нас</h2>
       <h4 class="text-center font-bold pb-3">Універсальна ПЛР Лабораторія Green lab</h4>
-      <p class="indent-6">Універсальна лабораторія &ndash; це сучасний ветеринарний діагностичний центр, основний
+      <p class="indent-6 px-10">Універсальна лабораторія &ndash; це сучасний ветеринарний діагностичний центр, основний
         напрямок
         роботи якого-молекулярно-генетичні дослідження хвороб дрібних домашніх тварин.Своєчасна і точна
         діагностика є невід&rsquo;ємною частиною професіоналізму ветеринарного лікаря. Щодня до нього за допомогою
         звертається безліч власників тварин з проханням допомогти їх улюбленому вихованцеві і найчастіше
         питання, яке задають ветеринарним фахівцям: &#171;Лікар, що з ним?&raquo;.<br>
       </p>
-      <p class="indent-6">Саме тому мы створили сучасну ветеринарну лабораторію, оснащену високотехнічним обладнанням і
+      <p class="indent-6 px-10">Саме тому мы створили сучасну ветеринарну лабораторію, оснащену високотехнічним обладнанням і
         використовує технології ХХІ століття, розраховану саме на роботу з чотириногими пацієнтами.
         Наша особлива гордість-вперше для українських ветеринарних лікарів доступна технологія &ldquo;
         ПЛР-РВ&rdquo; (ПЛР в реальному часі), що значно випередила інші варіанти ПЛР за точністю
@@ -54,37 +56,38 @@
         і з увагою поставимося до ваших пропозицій!
         Універсальна діагностична лабораторія-сучасні методи діагностики для професіоналів.
       </p>
-      <p class="text-center mt-5">З повагою, універсальна лабораторія Green PCR lab.</p>
-      <img src="../../../assets/images/main/about_us.png" alt="about us">
-    </main>
+      <p class="text-center mt-5 italic">З повагою, універсальна лабораторія Green PCR lab.</p>
+      <div class="mx-auto block">
+        <img class="block m-auto align-baseline" src="../../../assets/images/main/about_us.png" alt="About us">
+      </div>
+    </div>
   </div>
+  <hr>
 
-
-  <div class="certificate my-6">
-    <div class="row-auto container">
-      <div class="font-nunito">
-        <h2 class="text-center text-lg font-semibold text-gray-800 py-5">Приклад результатів</h2>
+  <!-- Certificate-->
+    <div class="certificate row-auto my-6 flex flex-wrap justify-center ml-4">
+      <div class="font-nunito m-4 w-1/4">
+        <h2 class="text-center text-2xl font-semibold text-gray-800 py-5">Приклад результатів</h2>
         <div class="text-center">
           Результати відправляємо на e-mail адресу, а також по пошті на вказаний в бланці адресу.
         </div>
       </div>
-
-      <div class="my-5">
+      <div class="m-4 w-1/4">
         <img id="myImg1" src="../../../assets/images/main/cert1.png" alt="Сертифікат №1" (click)="openModal('../../../assets/images/main/cert1.png', 'Сертифікат №1')">
       </div>
-      <div class="pb-5">
+      <div class="pb-4 m-4 w-1/4">
         <img id="myImg1" src="../../../assets/images/main/cert2.png" alt="Сертифікат №2" (click)="openModal('../../../assets/images/main/cert2.png', 'Сертифікат №2')">
       </div>
-      
       <div class="modal" [ngStyle]="{ display: modalOpen ? 'block' : 'none' }">
         <span class="close" (click)="closeModal()">&times;</span>
         <img class="modal-content" [src]="modalImageUrl" alt="Image">
         <div id="caption">{{ modalCaption }}</div>
       </div>
     </div>
-  </div>
-  <br>
+
   <hr>
+
+
   <div class="contacts container py-10 font-nunito">
     <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold"><svg
         class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -92,7 +95,7 @@
           d="M96 0C60.7 0 32 28.7 32 64V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H96zM208 288h64c44.2 0 80 35.8 80 80c0 8.8-7.2 16-16 16H144c-8.8 0-16-7.2-16-16c0-44.2 35.8-80 80-80zm-32-96a64 64 0 1 1 128 0 64 64 0 1 1 -128 0zM512 80c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V80zM496 192c-8.8 0-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm16 144c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V336z" />
       </svg>Контакти</h2>
     <div class="content">
-      <div class="flex flex-wrap place-content-center text-center space-y-10 flex-col">
+      <div class="flex flex-wrap place-content-center text-center space-x-44 flex-row">
         <div class="address-contacts">
           <svg class="w-6 inline py-2 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path
@@ -131,24 +134,42 @@
     </div>
   </div>
   <hr>
-  <div class="documents">
-    <div class="container">
+
+
+<!--  
+    <div class="container documents">
     <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold"><svg class="fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM288 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L416 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z"/></svg> Дозвільні документи</h2>
-    <div class="flex flex-wrap text-center">
+    <div class="flex flex-wrap justify-center w-1/3">
         <div class="font-nunito">
             <div>Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</div>
             <br/>
             <a routerLink="/license" class="gradient-button-green">Переглянути документи</a>
         </div>
-        <div>
         <a href="../../../assets/images/main/doc_certificate.png" target="_blank"><img class="mt-3 w-30" loading="lazy" src="../../../assets/images/main/doc_certificate.png"></a>
         <div class="mb-4 font-nunito text-sm">Сертифікат визнання вимірювальних можливостей</div>
-        </div>
-        </div>
-    </div>
-  </div>
+      </div>
+    </div> -->
+
+
+    <section class="bg-white">
+      <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
+          <div class="mr-auto place-self-center lg:col-span-7 font-nunito text-center">
+              <h1 class="max-w-2xl mb-10 text-gray-800 text-4xl font-semibold tracking-tight leading-none text-center"><svg class="fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM288 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L416 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z"/></svg>
+                Дозвільні документи</h1>
+              <p class="max-w-2xl mb-6 font-light text-gray-900 lg:mb-8 md:text-lg lg:text-xl">Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</p>
+              <a routerLink="/license" class="gradient-button-green inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100">
+                Переглянути документи
+              </a> 
+          </div>
+          <div class="lg:mt-0 lg:col-span-5 lg:flex">
+            <a href="../../../assets/images/main/doc_certificate.png" target="_blank"><img class="mt-3 w-30" loading="lazy" src="../../../assets/images/main/doc_certificate.png"></a>
+            <!-- <div class="mb-4 font-nunito text-sm">Сертифікат визнання вимірювальних можливостей</div> -->
+          </div>                
+      </div>
+  </section>
   <hr>
-  <br>
+
+
   <iframe
     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2756.2206500102093!2d30.64969710708409!3d46.30545521952355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c7c94218cb316f%3A0x1e698dad50c9fa6c!2z0J7Qu9C10LrRgdCw0L3QtNGA0ZbQudGB0YzQutCwINCy0YPQu9C40YbRjywgMiwg0KfQvtGA0L3QvtC80L7RgNGB0YzQuiwg0J7QtNC10YHRjNC60LAg0L7QsdC70LDRgdGC0YwsIDY4MDAw!5e0!3m2!1suk!2sua!4v1682688194174!5m2!1suk!2sua"
     width="100%" height="600px" style="border:0;" allowfullscreen="" loading="lazy"
