--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -1,7 +1,6 @@
 
 .main-image {
-    // min-height: 86dvh;
-    min-height: 86dvh;
+    min-height: 100dvh;
     border-radius: 0 0 30px 30px;
     -moz-border-radius: 0 0 30px 30px;
     -webkit-border-radius: 0 0 30px 30px;
@@ -53,6 +52,9 @@
 .worktime {
     background-color: rgba(153,156,156,0.29);
     border-radius: 25px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .arrow-down {
@@ -107,16 +109,14 @@
 .certificate {
     background: rgb(128,255,211);
     background: linear-gradient(161deg, rgba(128,255,211,1) 0%, rgba(198,255,128,1) 100%);
-    border-radius: 20% 0 0 20%;
-    -moz-border-radius: 20% 0 0 20%;
-    -webkit-border-radius: 20% 0 0 20%;
+    border-radius: 120px 0 0 120px;
+    -moz-border-radius: 120px 0 0 120px;
+    -webkit-border-radius: 120px 0 0 120px;
     border: 0 solid #000000;
 }
 
 .certificate img {
-    border-color: aqua;
     width: 70%;
-    margin-left: 15%;
     aspect-ratio: 3/2;
     object-fit: contain;
 }
