--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="overflow-x-hidden flex flex-col min-h-full ss:max-xl:min-w-full">
-  <app-topbar></app-topbar>
-  <app-header [ngClass]="{'sticky-block': isSticky, 'non-sticky-block': !isSticky}"></app-header>
-  <div [ngStyle]="{'height.px': isSticky ? blockHeight : 0}"></div>
+  <div #topbar>
+    <app-topbar></app-topbar>
+  </div>
+  <div [ngClass]="{'fixed-header': !isTopbarVisible}">
+    <app-header></app-header>
+  </div>
   <div class="content">
     <router-outlet></router-outlet>
   </div>
   <app-footer class="mt-auto"></app-footer>
 </div>
-
-
-
