--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,23 @@
-.sticky-block {
-    position: fixed;
-    top: 0;
-    min-width: 100%;
-    z-index: 10;
+// :root {
+//   --topbar-height: 98px; /* Установи высоту топбара */
+// }
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #fff; /* Убедись, что фон задан, чтобы избежать прозрачности */
 }
-  .non-sticky-block {
-    position: static;
+
+.content {
+  margin-top: var(--topbar-height); /* Используем переменную CSS для отступа */
+}
+
+.app-topbar {
+  transition: top 0.3s ease-in-out;
+}
+
+.app-header {
+  transition: top 0.3s ease-in-out;
 }
