--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,12 +7,12 @@
                   <span class="self-center text-2xl font-thin whitespace-nowrap text-white">Green Lab</span>
               </a>
           </div>
-          <div class="footer-link grid grid-cols-2 text-center   text-white font-thin list-none items-center">
+          <div class="footer-link grid grid-cols-2 text-center   text-white font-jost list-none items-center">
                       <li>
                           <a routerLink="/" class="hover:text-light-green">Головна</a>
                       </li>
                       <li>
-                          <a routerLink="/" class="hover:text-light-green">Дозвільні документи</a>
+                          <a routerLink="/license" class="hover:text-light-green">Дозвільні документи</a>
                       </li>
                       <li>
                           <a href="../../../assets/files/blank.pdf" download class="hover:text-light-green">Направлення на дослідження</a>
@@ -28,9 +28,9 @@
                       </li>
           </div>
       </div>
-      <hr class="my-6 sm:mx-auto lg:my-8 " />
+      <hr class="mt-4 sm:mx-auto lg:my-8 " />
       <div class="sm:flex sm:items-center sm:justify-between">
-          <span class="text-sm text-white sm:text-center dark:text-gray-400">© 2023 GreenLab. All Rights Reserved.
+          <span class="text-xs text-white sm:text-center dark:text-gray-400">© 2023-2024 GreenLab. Всі права захищені.
           </span>
       </div>
     </div>
