--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -17,7 +17,7 @@
         </a>
       </div>
       <p class="price-info font-raleway my-5 lg:text-lg lg:my-2">Ціни вказані за станом на 01.06.2023</p>
-      <div class="worktime text-center font-jost mx-3 p-1 my-6 lg:text-xl lg:w-1/2 lg:font-medium">
+      <div class="block worktime text-center font-jost p-1 mx-6 lg:text-xl lg:w-1/2 lg:font-medium">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10.00-18.00 (НД-вихідний)</p>
         <p>Доставка з клініки м.Чорноморськ ПН-СБ (НД-вихідний)</p>
@@ -32,17 +32,17 @@
 
   <!-- About us -->
   <div class="container">
-    <div class="font-nunito text-base relative p-3 -mt-8 mb-5 mx-64 bg-white rounded-3xl shadow-2xl drop-shadow-md">
-      <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold">Про нас</h2>
-      <h4 class="text-center font-bold pb-3">Універсальна ПЛР Лабораторія Green lab</h4>
-      <p class="indent-6 px-10">Універсальна лабораторія &ndash; це сучасний ветеринарний діагностичний центр, основний
+    <div class="font-nunito text-base relative py-6 -mt-8 mb-5 bg-white rounded-3xl shadow-2xl drop-shadow-md lg:mx-64">
+      <h2 class="text-center text-3xl pt-3 pb-6 text-gray-800 font-semibold">Про нас</h2>
+      <h4 class="text-center font-bold pb-3 px-8">Універсальна ПЛР Лабораторія Green lab</h4>
+      <p class="indent-6 px-6">Універсальна лабораторія &ndash; це сучасний ветеринарний діагностичний центр, основний
         напрямок
         роботи якого-молекулярно-генетичні дослідження хвороб дрібних домашніх тварин.Своєчасна і точна
         діагностика є невід&rsquo;ємною частиною професіоналізму ветеринарного лікаря. Щодня до нього за допомогою
         звертається безліч власників тварин з проханням допомогти їх улюбленому вихованцеві і найчастіше
         питання, яке задають ветеринарним фахівцям: &#171;Лікар, що з ним?&raquo;.<br>
       </p>
-      <p class="indent-6 px-10">Саме тому мы створили сучасну ветеринарну лабораторію, оснащену високотехнічним обладнанням і
+      <p class="indent-6 px-6">Саме тому мы створили сучасну ветеринарну лабораторію, оснащену високотехнічним обладнанням і
         використовує технології ХХІ століття, розраховану саме на роботу з чотириногими пацієнтами.
         Наша особлива гордість-вперше для українських ветеринарних лікарів доступна технологія &ldquo;
         ПЛР-РВ&rdquo; (ПЛР в реальному часі), що значно випередила інші варіанти ПЛР за точністю
@@ -56,7 +56,7 @@
         і з увагою поставимося до ваших пропозицій!
         Універсальна діагностична лабораторія-сучасні методи діагностики для професіоналів.
       </p>
-      <p class="text-center mt-5 italic">З повагою, універсальна лабораторія Green PCR lab.</p>
+      <p class="text-center mt-5 italic mx-6">З повагою, універсальна лабораторія Green PCR lab.</p>
       <div class="mx-auto block">
         <img class="block m-auto align-baseline" src="../../../assets/images/main/about_us.png" alt="About us">
       </div>
@@ -65,18 +65,18 @@
   <hr>
 
   <!-- Certificate-->
-    <div class="certificate row-auto my-6 flex flex-wrap justify-center ml-4">
-      <div class="font-nunito m-4 w-1/4">
-        <h2 class="text-center text-2xl font-semibold text-gray-800 py-5">Приклад результатів</h2>
-        <div class="text-center">
+    <div class="certificate my-6 flex flex-wrap justify-center ml-4 items-center">
+      <div class="font-nunito m-4">
+        <h2 class="text-center text-xl font-semibold text-gray-800 py-5">Приклад результатів</h2>
+        <div class="text-center text-sm">
           Результати відправляємо на e-mail адресу, а також по пошті на вказаний в бланці адресу.
         </div>
       </div>
-      <div class="m-4 w-1/4">
-        <img id="myImg1" src="../../../assets/images/main/cert1.png" alt="Сертифікат №1" (click)="openModal('../../../assets/images/main/cert1.png', 'Сертифікат №1')">
+      <div class="flex justify-center items-center">
+        <img id="myImg1" src="../../../assets/images/main/cert1.png" alt="Сертифікат №1" (click)="openModal('../../../assets/images/main/cert1.png', 'Електронний — відправляємо на електронну адресу.')">
       </div>
-      <div class="pb-4 m-4 w-1/4">
-        <img id="myImg1" src="../../../assets/images/main/cert2.png" alt="Сертифікат №2" (click)="openModal('../../../assets/images/main/cert2.png', 'Сертифікат №2')">
+      <div class="flex pb-4 m-4 justify-center items-center">
+        <img id="myImg1" src="../../../assets/images/main/cert2.png" alt="Сертифікат №2" (click)="openModal('../../../assets/images/main/cert2.png', 'Друкований (замовляється окремо) — з мокрою печаткою, англійською мовою, відправляється поштою.')">
       </div>
       <div class="modal" [ngStyle]="{ display: modalOpen ? 'block' : 'none' }">
         <span class="close" (click)="closeModal()">&times;</span>
@@ -84,20 +84,19 @@
         <div id="caption">{{ modalCaption }}</div>
       </div>
     </div>
-
   <hr>
 
-
+  <!-- Contacts-->
   <div class="contacts container py-10 font-nunito">
-    <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold"><svg
-        class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+    <h2 class="text-center text-3xl pt-1 pb-10 text-gray-800 font-semibold"><svg
+        class=" fill-gray-800 mr-2 h-8 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
         <path
           d="M96 0C60.7 0 32 28.7 32 64V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H96zM208 288h64c44.2 0 80 35.8 80 80c0 8.8-7.2 16-16 16H144c-8.8 0-16-7.2-16-16c0-44.2 35.8-80 80-80zm-32-96a64 64 0 1 1 128 0 64 64 0 1 1 -128 0zM512 80c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V80zM496 192c-8.8 0-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm16 144c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V336z" />
       </svg>Контакти</h2>
     <div class="content">
-      <div class="flex flex-wrap place-content-center text-center space-x-44 flex-row">
+      <div class="flex flex-wrap place-content-center text-center space-y-8 flex-col">
         <div class="address-contacts">
-          <svg class="w-6 inline py-2 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <svg class="w-6 inline py-1 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path
               d="M172.3 501.7C27 291 0 269.4 0 192 0 86 86 0 192 0s192 86 192 192c0 77.4-27 99-172.3 309.7-9.5 13.8-29.9 13.8-39.5 0zM192 272c44.2 0 80-35.8 80-80s-35.8-80-80-80-80 35.8-80 80 35.8 80 80 80z" />
           </svg>
@@ -106,7 +105,7 @@
           <div>вул.Олександрійська, 2</div>
         </div>
         <div class="phone-contacts">
-          <svg class="w-6 inline py-2 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <svg class="w-6 inline py-1 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path
               d="M497.4 361.8l-112-48a24 24 0 0 0 -28 6.9l-49.6 60.6A370.7 370.7 0 0 1 130.6 204.1l60.6-49.6a23.9 23.9 0 0 0 6.9-28l-48-112A24.2 24.2 0 0 0 122.6 .6l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.3 24.3 0 0 0 -14-27.6z" />
           </svg>
@@ -152,17 +151,18 @@
 
 
     <section class="bg-white">
-      <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
+      <div class="grid max-w-screen-xl px-6 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
           <div class="mr-auto place-self-center lg:col-span-7 font-nunito text-center">
-              <h1 class="max-w-2xl mb-10 text-gray-800 text-4xl font-semibold tracking-tight leading-none text-center"><svg class="fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM288 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L416 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z"/></svg>
+              <h1 class="max-w-2xl mb-10 text-gray-800 text-3xl font-semibold tracking-tight leading-none text-center"><svg class="fill-gray-800 mr-1 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM288 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L416 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z"/></svg>
                 Дозвільні документи</h1>
               <p class="max-w-2xl mb-6 font-light text-gray-900 lg:mb-8 md:text-lg lg:text-xl">Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</p>
               <a routerLink="/license" class="gradient-button-green inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100">
                 Переглянути документи
               </a> 
           </div>
-          <div class="lg:mt-0 lg:col-span-5 lg:flex">
-            <a href="../../../assets/images/main/doc_certificate.png" target="_blank"><img class="mt-3 w-30" loading="lazy" src="../../../assets/images/main/doc_certificate.png"></a>
+          <div class="lg:mt-0 lg:col-span-5 lg:flex mt-2 px-20">
+            <img src="../../../assets/images/main/doc_certificate.png" alt="Сертифікат №2" (click)="openModal('../../../assets/images/main/doc_certificate.png', 'Сертифікат визнання вимірювальних можливостей')">
+            <!-- <a href="../../../assets/images/main/doc_certificate.png" target="_blank"><img class="mt-3 w-30" loading="lazy" src="../../../assets/images/main/doc_certificate.png"></a> -->
             <!-- <div class="mb-4 font-nunito text-sm">Сертифікат визнання вимірювальних можливостей</div> -->
           </div>                
       </div>
