--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -52,9 +52,6 @@
 .worktime {
     background-color: rgba(153,156,156,0.29);
     border-radius: 25px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .arrow-down {
@@ -138,6 +135,8 @@
   .modal-content {
     margin-top: 5%;
     display: block;
+    align-items: center;
+    margin: auto;
     width: 100%;
     height: 85%;
     animation-name: zoom;
@@ -157,7 +156,7 @@
 
   .close {
     position: absolute;
-    top: 10%;
+    top: 5%;
     right: 35px;
     color: #f1f1f1;
     font-size: 40px;
