--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="overflow-x-hidden flex flex-col min-h-full ss:max-xl:min-w-full">
+<div class="flex flex-col min-h-full ss:max-xl:min-w-full">
   <div #topbar>
     <app-topbar></app-topbar>
   </div>
-  <div [ngClass]="{'fixed-header': !isTopbarVisible}">
+  <div class="sticky-header">
     <app-header></app-header>
   </div>
   <div class="content">
