--- a/src/app/components/pages/license/license.component.html
+++ b/src/app/components/pages/license/license.component.html
@@ -13,6 +13,10 @@
             <p>Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства
                 України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну
                 перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</p>
+
+            <h4 class="font-bold text-2xl text-center my-2">Сертифікат визнання вимірювальних можливостей</h4>
+            <img src="../../../../assets/images/main/doc_certificate.png" alt="Сертифікат визнання вимірювальних можливостей">
+
             <h4 class="font-bold text-2xl text-center my-2">Акт санітарно-епідеміологічного обстеження об'єкта</h4>
             <app-slideshow [images]="[
                 '../../../../assets/images/license/1.png',
@@ -27,6 +31,15 @@
             </app-slideshow>
 
             <h4 class="font-bold text-2xl text-center my-2">Перелік вимірювальних можливостей</h4>
+            <app-slideshow [images]="[
+            '../../../../assets/images/license/act1.png',
+            '../../../../assets/images/license/act2.png',
+            '../../../../assets/images/license/act3.png',
+            '../../../../assets/images/license/act4.png',
+            '../../../../assets/images/license/act5.png',
+            '../../../../assets/images/license/act6.png',
+            ]">
+            </app-slideshow>
         </div>
     </div>
 </div>
