--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -78,8 +78,8 @@
       <div class="flex pb-4 m-4 justify-center items-center">
         <img id="myImg1" src="../../../assets/images/main/cert2.png" alt="Сертифікат №2" (click)="openModal('../../../assets/images/main/cert2.png', 'Друкований (замовляється окремо) — з мокрою печаткою, англійською мовою, відправляється поштою.')">
       </div>
-      <div class="modal" [ngStyle]="{ display: modalOpen ? 'block' : 'none' }">
-        <span class="close" (click)="closeModal()">&times;</span>
+      <div class="modal" (click)="closeModal()" [ngStyle]="{ display: modalOpen ? 'block' : 'none' }">
+        <!-- <span class="close" (click)="closeModal()">&times;</span> -->
         <img class="modal-content" [src]="modalImageUrl" alt="Image">
         <div id="caption">{{ modalCaption }}</div>
       </div>
@@ -134,22 +134,6 @@
   </div>
   <hr>
 
-
-<!--  
-    <div class="container documents">
-    <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold"><svg class="fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM288 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L416 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z"/></svg> Дозвільні документи</h2>
-    <div class="flex flex-wrap justify-center w-1/3">
-        <div class="font-nunito">
-            <div>Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</div>
-            <br/>
-            <a routerLink="/license" class="gradient-button-green">Переглянути документи</a>
-        </div>
-        <a href="../../../assets/images/main/doc_certificate.png" target="_blank"><img class="mt-3 w-30" loading="lazy" src="../../../assets/images/main/doc_certificate.png"></a>
-        <div class="mb-4 font-nunito text-sm">Сертифікат визнання вимірювальних можливостей</div>
-      </div>
-    </div> -->
-
-
     <section class="bg-white">
       <div class="grid max-w-screen-xl px-6 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
           <div class="mr-auto place-self-center lg:col-span-7 font-nunito text-center">
@@ -158,13 +142,12 @@
               <p class="max-w-2xl mb-6 font-light text-gray-900 lg:mb-8 md:text-lg lg:text-xl">Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</p>
               <a routerLink="/license" class="gradient-button-green inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100">
                 Переглянути документи
-              </a> 
+              </a>
           </div>
           <div class="lg:mt-0 lg:col-span-5 lg:flex mt-2 px-20">
             <img src="../../../assets/images/main/doc_certificate.png" alt="Сертифікат №2" (click)="openModal('../../../assets/images/main/doc_certificate.png', 'Сертифікат визнання вимірювальних можливостей')">
-            <!-- <a href="../../../assets/images/main/doc_certificate.png" target="_blank"><img class="mt-3 w-30" loading="lazy" src="../../../assets/images/main/doc_certificate.png"></a> -->
-            <!-- <div class="mb-4 font-nunito text-sm">Сертифікат визнання вимірювальних можливостей</div> -->
-          </div>                
+          </div>
+          <div class="font-nunito text-sm text-center">Сертифікат визнання вимірювальних можливостей</div>  
       </div>
   </section>
   <hr>
