--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -150,13 +150,13 @@
     max-width: 700px;
     text-align: center;
     color: #ccc;
-    padding: 10px 0;
-    height: 10px;
+    padding: auto;
+    height: 70px;
   }
 
   .close {
     position: absolute;
-    top: 5%;
+    top: 12%;
     right: 35px;
     color: #f1f1f1;
     font-size: 40px;
